@@ -1121,6 +1121,14 @@ argument_list|(
 literal|false
 argument_list|)
 decl_stmt|;
+comment|// This variable is only for testing
+DECL|field|logAggregationTimes
+specifier|private
+name|int
+name|logAggregationTimes
+init|=
+literal|0
+decl_stmt|;
 DECL|field|renameTemporaryLogFileFailed
 specifier|private
 name|boolean
@@ -2017,8 +2025,31 @@ name|writer
 init|=
 literal|null
 decl_stmt|;
+name|String
+name|diagnosticMessage
+init|=
+literal|""
+decl_stmt|;
+name|boolean
+name|logAggregationSucceedInThisCycle
+init|=
+literal|true
+decl_stmt|;
 try|try
 block|{
+if|if
+condition|(
+name|pendingContainerInThisCycle
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
+name|logAggregationTimes
+operator|++
+expr_stmt|;
 try|try
 block|{
 name|writer
@@ -2066,6 +2097,10 @@ name|IOException
 name|e1
 parameter_list|)
 block|{
+name|logAggregationSucceedInThisCycle
+operator|=
+literal|false
+expr_stmt|;
 name|LOG
 operator|.
 name|error
@@ -2288,16 +2323,6 @@ operator|+
 name|currentTime
 argument_list|)
 decl_stmt|;
-name|String
-name|diagnosticMessage
-init|=
-literal|""
-decl_stmt|;
-name|boolean
-name|logAggregationSucceedInThisCycle
-init|=
-literal|true
-decl_stmt|;
 specifier|final
 name|boolean
 name|rename
@@ -2338,16 +2363,6 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|remoteFS
-operator|.
-name|exists
-argument_list|(
-name|remoteNodeTmpLogFileForApp
-argument_list|)
-condition|)
-block|{
-if|if
-condition|(
 name|rename
 condition|)
 block|{
@@ -2372,7 +2387,6 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 return|return
 literal|null
@@ -2466,6 +2480,88 @@ operator|=
 literal|false
 expr_stmt|;
 block|}
+block|}
+finally|finally
+block|{
+name|LogAggregationStatus
+name|logAggregationStatus
+init|=
+name|logAggregationSucceedInThisCycle
+condition|?
+name|LogAggregationStatus
+operator|.
+name|RUNNING
+else|:
+name|LogAggregationStatus
+operator|.
+name|RUNNING_WITH_FAILURE
+decl_stmt|;
+name|sendLogAggregationReport
+argument_list|(
+name|logAggregationStatus
+argument_list|,
+name|diagnosticMessage
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|appFinished
+condition|)
+block|{
+comment|// If the app is finished, one extra final report with log aggregation
+comment|// status SUCCEEDED/FAILED will be sent to RM to inform the RM
+comment|// that the log aggregation in this NM is completed.
+name|LogAggregationStatus
+name|finalLogAggregationStatus
+init|=
+name|renameTemporaryLogFileFailed
+operator|||
+operator|!
+name|logAggregationSucceedInThisCycle
+condition|?
+name|LogAggregationStatus
+operator|.
+name|FAILED
+else|:
+name|LogAggregationStatus
+operator|.
+name|SUCCEEDED
+decl_stmt|;
+name|sendLogAggregationReport
+argument_list|(
+name|finalLogAggregationStatus
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|writer
+operator|!=
+literal|null
+condition|)
+block|{
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+DECL|method|sendLogAggregationReport ( LogAggregationStatus logAggregationStatus, String diagnosticMessage)
+specifier|private
+name|void
+name|sendLogAggregationReport
+parameter_list|(
+name|LogAggregationStatus
+name|logAggregationStatus
+parameter_list|,
+name|String
+name|diagnosticMessage
+parameter_list|)
+block|{
 name|LogAggregationReport
 name|report
 init|=
@@ -2496,15 +2592,7 @@ name|report
 operator|.
 name|setLogAggregationStatus
 argument_list|(
-name|logAggregationSucceedInThisCycle
-condition|?
-name|LogAggregationStatus
-operator|.
-name|RUNNING
-else|:
-name|LogAggregationStatus
-operator|.
-name|RUNNING_WITH_FAILURE
+name|logAggregationStatus
 argument_list|)
 expr_stmt|;
 name|this
@@ -2519,78 +2607,6 @@ argument_list|(
 name|report
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|appFinished
-condition|)
-block|{
-comment|// If the app is finished, one extra final report with log aggregation
-comment|// status SUCCEEDED/FAILED will be sent to RM to inform the RM
-comment|// that the log aggregation in this NM is completed.
-name|LogAggregationReport
-name|finalReport
-init|=
-name|Records
-operator|.
-name|newRecord
-argument_list|(
-name|LogAggregationReport
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|finalReport
-operator|.
-name|setApplicationId
-argument_list|(
-name|appId
-argument_list|)
-expr_stmt|;
-name|finalReport
-operator|.
-name|setLogAggregationStatus
-argument_list|(
-name|renameTemporaryLogFileFailed
-condition|?
-name|LogAggregationStatus
-operator|.
-name|FAILED
-else|:
-name|LogAggregationStatus
-operator|.
-name|SUCCEEDED
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|context
-operator|.
-name|getLogAggregationStatusForApps
-argument_list|()
-operator|.
-name|add
-argument_list|(
-name|finalReport
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-finally|finally
-block|{
-if|if
-condition|(
-name|writer
-operator|!=
-literal|null
-condition|)
-block|{
-name|writer
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 block|}
 DECL|method|cleanOldLogs ()
 specifier|private
@@ -3796,6 +3812,22 @@ return|return
 name|this
 operator|.
 name|userUgi
+return|;
+block|}
+annotation|@
+name|Private
+annotation|@
+name|VisibleForTesting
+DECL|method|getLogAggregationTimes ()
+specifier|public
+name|int
+name|getLogAggregationTimes
+parameter_list|()
+block|{
+return|return
+name|this
+operator|.
+name|logAggregationTimes
 return|;
 block|}
 block|}
