@@ -14060,6 +14060,324 @@ name|stop
 argument_list|()
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|20000
+argument_list|)
+DECL|method|testSkipUnnecessaryNNOperationsForShortJob ()
+specifier|public
+name|void
+name|testSkipUnnecessaryNNOperationsForShortJob
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|LogAggregationContext
+name|logAggregationContext
+init|=
+name|Records
+operator|.
+name|newRecord
+argument_list|(
+name|LogAggregationContext
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|logAggregationContext
+operator|.
+name|setLogAggregationPolicyClassName
+argument_list|(
+name|FailedOrKilledContainerLogAggregationPolicy
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|verifySkipUnnecessaryNNOperations
+argument_list|(
+name|logAggregationContext
+argument_list|,
+literal|0
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|20000
+argument_list|)
+DECL|method|testSkipUnnecessaryNNOperationsForService ()
+specifier|public
+name|void
+name|testSkipUnnecessaryNNOperationsForService
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|this
+operator|.
+name|conf
+operator|.
+name|setLong
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|NM_LOG_AGGREGATION_ROLL_MONITORING_INTERVAL_SECONDS
+argument_list|,
+literal|3600
+argument_list|)
+expr_stmt|;
+name|LogAggregationContext
+name|contextWithAMOnly
+init|=
+name|Records
+operator|.
+name|newRecord
+argument_list|(
+name|LogAggregationContext
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|contextWithAMOnly
+operator|.
+name|setLogAggregationPolicyClassName
+argument_list|(
+name|AMOnlyLogAggregationPolicy
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|contextWithAMOnly
+operator|.
+name|setRolledLogsIncludePattern
+argument_list|(
+literal|"sys*"
+argument_list|)
+expr_stmt|;
+name|contextWithAMOnly
+operator|.
+name|setRolledLogsExcludePattern
+argument_list|(
+literal|"std_final"
+argument_list|)
+expr_stmt|;
+name|verifySkipUnnecessaryNNOperations
+argument_list|(
+name|contextWithAMOnly
+argument_list|,
+literal|1
+argument_list|,
+literal|4
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|verifySkipUnnecessaryNNOperations ( LogAggregationContext logAggregationContext, int expectedLogAggregationTimes, int expectedAggregationReportNum)
+specifier|private
+name|void
+name|verifySkipUnnecessaryNNOperations
+parameter_list|(
+name|LogAggregationContext
+name|logAggregationContext
+parameter_list|,
+name|int
+name|expectedLogAggregationTimes
+parameter_list|,
+name|int
+name|expectedAggregationReportNum
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|LogAggregationService
+name|logAggregationService
+init|=
+operator|new
+name|LogAggregationService
+argument_list|(
+name|dispatcher
+argument_list|,
+name|this
+operator|.
+name|context
+argument_list|,
+name|this
+operator|.
+name|delSrvc
+argument_list|,
+name|super
+operator|.
+name|dirsHandler
+argument_list|)
+decl_stmt|;
+name|logAggregationService
+operator|.
+name|init
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|)
+expr_stmt|;
+name|logAggregationService
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|ApplicationId
+name|appId
+init|=
+name|createApplication
+argument_list|()
+decl_stmt|;
+name|logAggregationService
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|LogHandlerAppStartedEvent
+argument_list|(
+name|appId
+argument_list|,
+name|this
+operator|.
+name|user
+argument_list|,
+literal|null
+argument_list|,
+name|this
+operator|.
+name|acls
+argument_list|,
+name|logAggregationContext
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// Container finishes
+name|String
+index|[]
+name|logFiles
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"stdout"
+block|}
+decl_stmt|;
+name|finishContainer
+argument_list|(
+name|appId
+argument_list|,
+name|logAggregationService
+argument_list|,
+name|ContainerType
+operator|.
+name|APPLICATION_MASTER
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+name|logFiles
+argument_list|)
+expr_stmt|;
+name|AppLogAggregatorImpl
+name|aggregator
+init|=
+operator|(
+name|AppLogAggregatorImpl
+operator|)
+name|logAggregationService
+operator|.
+name|getAppLogAggregators
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|appId
+argument_list|)
+decl_stmt|;
+name|aggregator
+operator|.
+name|doLogAggregationOutOfBand
+argument_list|()
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+name|aggregator
+operator|.
+name|doLogAggregationOutOfBand
+argument_list|()
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+comment|// App finishes.
+name|logAggregationService
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|LogHandlerAppFinishedEvent
+argument_list|(
+name|appId
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|logAggregationService
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expectedLogAggregationTimes
+argument_list|,
+name|aggregator
+operator|.
+name|getLogAggregationTimes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|expectedAggregationReportNum
+argument_list|,
+name|this
+operator|.
+name|context
+operator|.
+name|getLogAggregationStatusForApps
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|numOfLogsAvailable (LogAggregationService logAggregationService, ApplicationId appId, boolean sizeLimited, String lastLogFile)
 specifier|private
 name|int
