@@ -884,6 +884,9 @@ Release 2.8.0 - UNRELEASED
     YARN-4066. Large number of queues choke fair scheduler.
     (Johan Gustavsson via kasha)
 
+    YARN-4720. Skip unnecessary NN operations in log aggregation.
+    (Jun Gong via mingma)
+
   BUG FIXES
 
     YARN-3197. Confusing log generated by CapacityScheduler. (Varun Saxena 
